syntax = "proto3";

package catprotocol.messages;

option csharp_namespace = "Protocol.Serialization.Protobuf.Generated";

// Common types used across all messages
message ProtocolHeader {
  string message_type = 1;
  string message_id = 2;
  string source_peer_id = 3;
  string target_peer_id = 4;
  int64 timestamp = 5;
  string protocol_version = 6;
  string correlation_id = 7;
  int32 priority = 8;
  bool is_encrypted = 9;
  int32 payload_size = 10;
}

message NodeIdentifier {
  string value = 1;
}

message ChecksumData {
  string algorithm = 1;
  bytes hash_value = 2;
}

message FileIdentifier {
  string value = 1;
}

message ChunkIdentifier {
  string value = 1;
}

// Base message envelope
message ProtocolMessage {
  ProtocolHeader header = 1;
  bytes payload = 2;
  bytes signature = 3;
}

// Error information
message ErrorInfo {
  int32 error_code = 1;
  string error_message = 2;
  string error_details = 3;
  string stack_trace = 4;
}

// Metadata dictionary
message MetadataEntry {
  string key = 1;
  string value = 2;
}

message Metadata {
  repeated MetadataEntry entries = 1;
}

// Status information
message StatusInfo {
  string status = 1;
  string description = 2;
  int64 timestamp = 3;
  Metadata additional_info = 4;
}

// Peer information
message PeerInfo {
  NodeIdentifier peer_id = 1;
  string endpoint = 2;
  string protocol_version = 3;
  int64 last_seen = 4;
  Metadata metadata = 5;
  repeated string capabilities = 6;
}

// File information
message FileInfo {
  FileIdentifier file_id = 1;
  string file_name = 2;
  int64 file_size = 3;
  ChecksumData file_checksum = 4;
  int64 total_chunks = 5;
  int32 chunk_size = 6;
  string checksum_algorithm = 7;
  Metadata metadata = 8;
}

// Chunk information
message ChunkInfo {
  ChunkIdentifier chunk_id = 1;
  int64 sequence_number = 2;
  int32 chunk_size = 3;
  ChecksumData chunk_checksum = 4;
  bytes chunk_data = 5;
}

// Progress information
message ProgressInfo {
  int64 chunks_transferred = 1;
  int64 total_chunks = 2;
  int64 bytes_transferred = 3;
  int64 total_bytes = 4;
  double percentage_complete = 5;
  double transfer_rate = 6;
  int64 elapsed_time_ms = 7;
  int64 estimated_time_remaining_ms = 8;
}
